[tool.poetry]
name = "daksh"
version = "0.1.0"
description = ""
authors = ["Aman Phatak <phatakaman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.3.4"
attrs = "^22.2.0"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
